--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="main">
     <h1>Онлайн магазин</h1>
-    <img src="https://freelancebook.ru/img/stexts/python1.jpg">
+    <img src="https://freelancebook.ru/img/stexts/python1.jpg" width="400px" height="400px">
     <p>Ку, это вроде мой магазин</p>
     <button id="buy">Купить</button>
     
